fixed vars in wrong place

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,8 +1,8 @@
-environment=
+environment=""
 
-region=
+region=""
 
-instance_type=
+instance_type=""
 
-client_name=
-project_name=
+client_name=""
+project_name=""
